// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homework Row renders in progress 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<a
  aria-label="Work on homework: revolutionary synthesize models"
  className="task row homework"
  data-event-id={1}
  href="/course/1/task/1"
  onClick={[Function]}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-5 col-10"
  >
    revolutionary synthesize models
  </div>
  <div
    className="due-at col-sm-3 col-5"
  >
    <time>
      Su Oct 15, 7:00am
    </time>
  </div>
  <div
    className="feedback col-sm-3 col-5"
  >
    <div
      className="c0"
    >
      <span
        className="tour-anchor"
        data-tour-anchor-id="assignment-progress-status"
      >
        5/7 answered
      </span>
    </div>
  </div>
</a>
`;

exports[`Homework Row renders with completed count 1`] = `
.c1 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-size: 1.2rem;
  margin-top: 5px;
  color: #6f6f6f;
}

<a
  aria-label="Work on homework: web-enabled benchmark interfaces"
  className="task row homework"
  data-event-id={2}
  href="/course/2/task/2"
  onClick={[Function]}
  tabIndex={-1}
>
  <div
    className="column-icon col-sm-1 col-2"
  >
    <i
      aria-label="homework icon"
      className="icon icon-lg icon-homework"
    />
  </div>
  <div
    className="title col-sm-5 col-10"
  >
    web-enabled benchmark interfaces
  </div>
  <div
    className="due-at col-sm-3 col-5"
  >
    <time>
      We Oct 11, 7:00am
    </time>
  </div>
  <div
    className="feedback col-sm-3 col-5"
  >
    <div
      className="c0"
    >
      <span
        className="tour-anchor"
        data-tour-anchor-id="assignment-progress-status"
      >
        null/6 correct
      </span>
      <span
        className="tour-anchor"
        data-tour-anchor-id="about-late-icon"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-clock fa-w-16 ox-icon ox-icon-clock c1"
          color="#c2002f"
          data-icon="clock"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      0
      /
      6
       answered on due date
    </div>
  </div>
</a>
`;
